--- a/medalprediction.ipynb
+++ b/medalprediction.ipynb
@@ -70,7 +70,7 @@
     "country=input(\"enter the country name\")\n",
     "data= df[df[\"country\"] == country][[\"prev_medals\", \"athletes\", \"age\"]]\n",
     "predicted= model.predict(data)\n",
-    "print(\"country:\",country,\"year\",2025,\":\",int(predicted[0]),\"medals\")"
+    "print(\"country:\",country,\"year\",2025,\":\",int(predicted[0].item()),\"medals\")"
    ]
   },
   {
